modules/protocol/http/test/long_header_key-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 127.0.0.1:42077 -> 127.0.0.1:80
debug grammar: parse error at byte 9021 for field 1 in header: token /[^:[:blank:]]+/ doesn't match
info alert: id = <>
	severity = low
	description = invalid http header
debug tcp-connection: dropping connection 127.0.0.1:42077 -> 127.0.0.1:80
debug tcp-connection: closing connection 127.0.0.1:42077 -> 127.0.0.1:80
